2001-09-20  Bart Schaefer  <schaefer@zsh.org>

	* 15847: Src/init.c: Avoid using the word "termcap" in an error
	message when it may in fact have been curses or terminfo that
	failed.

2001-09-19  Peter Stephenson  <pws@csr.com>

	* 15846: aczsh.m4: Fix attempt to restore LDFLAGS from non-existent
	saved value when testing RTLD_GLOBAL.

2001-09-18  Wayne Davison  <wayned@users.sourceforge.net>

	* 15837: Src/Zle/zle_hist.c: Fixed incremental search in vared
	(without -h) so that it doesn't access the history.

2001-09-16  Bart Schaefer  <schaefer@zsh.org>

	* Akinori MUSHA: 15815: Completion/BSD/Command/_bsd_pkg: More
	detailed completion of package options on different BSD flavors.

2001-09-12  Oliver Kiddle  <opk@zsh.org>

	* 15792: Doc/Zsh/manual.yo, Doc/Zsh/metafaq.yo: update url
	references to http://zsh.sunsite.dk/

2001-09-11  Wayne Davison  <wayned@users.sourceforge.net>

	* 15630 & 15713: Completion/Redhat/Command/_rpm: Brought over the
	--verify package-specification options and updated caching policy.

2001-09-11  Oliver Kiddle  <opk@zsh.org>

	* 15781: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_samba: new completion for samba tools

2001-09-09  Bart Schaefer  <schaefer@brasslantern.com>

	* David Lebel: 15742: zshconfig.ac: Shared object linkage on
	OpenBSD.

2001-09-09  Geoff Wing  <gcw@zsh.org>
	
	* 15621: Src/Zle/zle_refresh.c: display of status line was being
	mucked up; also fix continuation markers "<...." and "<....>"

	* unposted: Src/Zle/zle_refresh.c: fix possible seg fault on a
	screen height shrink

2001-08-28  Sven Wischnowsky  <wischnow@zsh.org>

	* 15717: Src/subst.c, Src/Modules/parameter.c,
	Src/Zle/zle_misc.c: handle possible NULL pointer returned from
	bufferwords()

2001-08-25  Bart Schaefer  <schaefer@zsh.org>

	* 15707: Src/init.c: Fix history crash caused by re-entering
	loop() when the `precmd' shell function uses `source' or `.'.

2001-08-24  Sven Wischnowsky  <wischnow@zsh.org>
